--- a/styles.css
+++ b/styles.css
@@ -217,5 +217,5 @@ background-color:none;
 }
 button:focus {
     outline: none;
-    border: none;  /* Optional: removes border if it exists */
+    border: none;  
 }
